try to fix native image